--- a/insights.Rmd
+++ b/insights.Rmd
@@ -32,19 +32,19 @@ In this section, we will employ appropriate visually driven data analysis techni
 
 **Qn 1- Using just the credit and loyalty card data, identify the most popular locations, and when they are popular. What anomalies do you see? What corrections would you recommend to correct these anomalies?**
 
-### Location popularity
+### 1.1 Location popularity
 
 Transaction volume for each location is analyzed using the loyalty and credit card transaction information provided. We also parsed the date information from timestamp in credit card data so as to align the comparison with loyalty data, where only date information is provided.
 
 Based on the interactive charts, we noted that the top 3 most popular locations by transaction volumes are: 
 
-*Loyalty card transaction volume*
+**Loyalty card transaction volume**
 
 1) Katerina's Cafe- Most popular on 01/11/2014 with 19 transactions, followed by 01/16/2014 (18) and 01/14/2014 (17).
 2) Hippokampos- Most popular on 01/08/2014  with 14 transactions, followed by 01/06/2014, 01/12/2014, 01/13/2014, 01/16/2014 and 01/17/2014 tied in second position with 13 transactions each day, and 01/15/2014 with 11 transactions.
 3) Guy's Gyros- Most popular on 01/13/2014 with 15 transactions, followed by 01/15/2014 (14) and 01/09/2014 (13), 01/16/2014 (13) and 01/17/2014 (13) being the third most popular days by transaction volume.
 
-*Credit card transaction volume*
+**Credit card transaction volume**
 
 1) Katerina's Cafe- Most popular on 01/18/2014 with 20 transactions, followed by 01/06/2014 (19) and 01/11/2014 (18).
 2) Hippokampos- Most popular on 01/16/2014  with 17 transactions, followed by 01/06/2014 (16), and 01/09/2014 with 14 transactions.
@@ -157,7 +157,7 @@ txn_vol_difference_heatmap %>% layout(yaxis = a, xaxis = list(
 
 We will then analyze the transaction volume by day of week to observe volume trends across the week.
 
-*Loyalty card transaction volume*
+**Loyalty card transaction volume**
 
 1) Katerina's Cafe- Most popular on Saturdays with 34 transactions, followed by Tuesdays (33) and Thursdays (32).
 2) Hippokampos- Most popular on Mondays with 26 transactions, followed by Wednesdays and Thursdays (25) and Fridays (22).
@@ -202,7 +202,7 @@ bscols(widths = c(10,4),
 
 Given that we are provided with credit card timestamp information, we will take one step further to analyze the volume of credit card transactions by location and time.
 
-*Credit card transaction volume*
+**Credit card transaction volume**
 
 1) Katerina's Cafe- Most popular on Saturdays with 38 transactions, followed by Mondays and Tuesdays (34) and Thursdays (32). Usually popular around dinner time (1700-2000) across all days in the week.
 2) Hippokampos- Most popular on Thursdays with 31 transactions, followed by Mondays (28) and Wednesdays (27). Usually popular around lunch time (1300-1600), except for weekends where it is more popular during dinner hours (1700-2000).
@@ -264,15 +264,15 @@ cc_timegroup_vol <-shared_data %>%
 bscols(widths = c(10,4),
   list(
     filter_select("location", "Please Specify the location", shared_data, group =  ~location, multiple = F),
-    datatable(shared_data) %>% formatDate(1, method = 'toLocaleDateString'),
   cc_wkday_vol,
-  cc_timegroup_vol
+  cc_timegroup_vol,
+  datatable(shared_data) %>% formatDate(1, method = 'toLocaleDateString')
 ))
 ```
 
 As observed above, popular day of week differs for some of the locations such as Katerina's Cafe. This is unexpected as we would expect the trends to be similar for both cards.
 
-### Anomalies
+### 1.2 Anomalies
 
 Other anomalies noted include:
 
