--- a/methodology.Rmd
+++ b/methodology.Rmd
@@ -95,7 +95,7 @@ The visualizations were designed make full use of RStudio's interactive plots su
 
 1) **Transaction volume overview by day**- We have decided to employ the use of a linked bar chart to reflect the volume of transactions across the 2 weeks for each location. Users can then select the location they want specific details on and the linked line chart will then provide the details on transaction volume across time.
 
-```{r, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Figure: Bar Chart of loyalty card transaction volume per location cross-linked with line chart"}
+```{r, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Bar Chart of loyalty card transaction volume per location cross-linked with line chart"}
 ##Volume from loyalty card dataset by date- linked
 
 library(crosstalk)
@@ -127,7 +127,7 @@ loyalty_loc_vol_line <- shared_data %>%
 bscols(widths = c(14,14), loyalty_loc_vol_bar, loyalty_loc_vol_line)
 ```
 
-```{r, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Figure: Bar Chart of credit card transaction volume per location cross-linked with line chart"}
+```{r, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Bar Chart of credit card transaction volume per location cross-linked with line chart"}
 ##Volume from credit card dataset by date- linked
 
 shared_data_cc <- SharedData$new(cc_data_cleaned, key = ~location)
@@ -159,7 +159,7 @@ bscols(widths = c(14,14), cc_data_loc_vol_bar, cc_loc_vol_line)
 
 2) **Overview of transaction volume difference**- provide an overview of the difference in transaction volume across each location per day.
 
-```{r, layout="l-body-outset", fig.width=7.5, fig.height=5.5, fig.cap="Figure: Heatmap showing difference in transaction volume per location"}
+```{r, layout="l-body-outset", fig.width=7.5, fig.height=5.5, fig.cap="Heatmap showing difference in transaction volume per location"}
 ##Difference in volume by day
 
 loyalty_data_count <- loyalty_data_cleaned %>%
@@ -201,7 +201,7 @@ txn_vol_difference_heatmap %>% layout(yaxis = a, xaxis = list(
 
 As the transaction time for credit cards is also provided, we have included an additional bar chart which reflects the volume per period of time in the selected location. This will provide more information to assess when the location is popular for each day of the week.
 
-```{r, fig.cap="Figure: Bar Chart of loyalty card transaction volume per location by day of week cross-linked with datatable"}
+```{r, fig.cap="Bar Chart of loyalty card transaction volume per location by day of week cross-linked with datatable"}
 ##Loyalty card volume by day of week
 
 ##Preparing the data
@@ -238,7 +238,7 @@ bscols(widths = c(10,4),
 )
 ```
 
-```{r, fig.cap="Figure: Bar Chart of credit card transaction volume per location by day of week and timegroup, cross-linked with datatable"}
+```{r, fig.cap="Bar Chart of credit card transaction volume per location by day of week and timegroup, cross-linked with datatable"}
 ## Credit card volume by day of week
 ## Loading data
 Sys.setlocale("LC_TIME", "English")
@@ -306,7 +306,7 @@ bscols(widths = c(10,4),
     - Interactive map- Clicking on any point in the trajectory allows us to see the CarID, day and timestamp of the respective point in the route.
     - Facet map- This allows us to visualize a single variable with many levels and arrange the plots in a more space efficient manner for easy comparison and analysis.
 
-```{r, fig.cap="Figure: Interactive map"}
+```{r, fig.cap="Interactive map"}
 ##Plotting GPS paths
 gps_path_selected <- gps_path_cleaned %>%
   filter(id == 1, day == 6)
@@ -318,7 +318,7 @@ tm_shape(bgmap) +
   tm_lines(col= "red")
 ```
 
-```{r, layout="l-body-outset", fig.width=6, fig.height=20, fig.cap="Figure: Facet map"}
+```{r, layout="l-body-outset", fig.width=6, fig.height=20, fig.cap="Facet map"}
 ##Facet map
 gps_path_selected <- gps_path_cleaned %>%
   filter(hour == 12)
@@ -340,7 +340,7 @@ We have employed both the use of an interactive and static visualization.
     
     - Facet network graph- This allows us to visualize a single variable with many levels and arrange the plots in a more space efficient manner for easy comparison and analysis. In this case, we have presented a facet graph by day and timegroup, allowing users to observe the interactions between nodes for each timegroup in day 6.
 
-```{r, layout="l-body-outset", fig.width=8, fig.height=7, fig.cap="Figure: Interactivet network graph"}
+```{r, layout="l-body-outset", fig.width=8, fig.height=7, fig.cap="Interactivet network graph"}
 ##Interactive viz
 visNetwork(cc_nodes, cc_edges, height = "800px", width = "100%") %>%
   visIgraphLayout(layout = "layout_in_circle") %>%
@@ -354,7 +354,7 @@ visNetwork(cc_nodes, cc_edges, height = "800px", width = "100%") %>%
   visLayout(randomSeed = 123)
 ```
 
-```{r, layout="l-body-outset", fig.width=12, fig.height=10, fig.cap="Figure: Facet map of day by timegroup"}
+```{r, layout="l-body-outset", fig.width=12, fig.height=10, fig.cap="Facet map of day by timegroup"}
 ##Facet
 cc_edges <- cc_edges %>%
   filter(day == 6)
