--- a/eda.Rmd
+++ b/eda.Rmd
@@ -48,13 +48,19 @@ for (p in packages){
 
 The data provided consists of four CSV files, a tourist map and geospatial data files- read_csv() is used to import each CSV file into R. 
 
-Data source       | Data
-----------------------------------------------------------------------------------------------------|
-cc_data           | Timestamp and transaction amount of credit cards at each location               |
-loyalty_data      | Timestamp and transaction amount of loyalty cards at each location              |
-car-assignments   | Name, employment type and employment title of each employee assigned to a carID |
-gps               | Latitude and longitude of each carID for each timestamp                         |
-geospatial data   | Geospatial data files, including shapefiles                                     |
++-----------------+---------------------------------------------------------------------------------+
+| Data source     | Data                                                                            |
++=================+=================================================================================+
+| cc_data         | Timestamp and transaction amount of credit cards at each location               |
++-----------------+---------------------------------------------------------------------------------+
+| loyalty_data    | Timestamp and transaction amount of loyalty cards at each location              |
++-----------------+---------------------------------------------------------------------------------+
+| car-assignments | Name, employment type and employment title of each employee assigned to a carID |
++-----------------+---------------------------------------------------------------------------------+
+| gps             | Latitude and longitude of each carID for each timestamp                         |
++-----------------+---------------------------------------------------------------------------------+
+| geospatial data | Geospatial data files, including shapefiles                                     |
++-----------------+---------------------------------------------------------------------------------+
 
 We note that there are some issues with the imported data:
     - Timestamp data is presented in character instead of datetime format
@@ -82,21 +88,21 @@ glimpse(assignment_data)
 
 Before working on the data frames, we need to explore and prepare each data frame.
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE}
 ##Loyalty data
-loyalty_data$timestamp <- date_time_parse(loyalty_data$timestamp,
-                                 zone = "",
-                                 format = "%m/%d/%Y") 
+loyalty_data$timestamp <- date_time_parse(loyalty_data$timestamp, 
+                                          zone = "", 
+                                          format = "%m/%d/%Y") 
 
 loyalty_data_cleaned <- loyalty_data %>%
   mutate(weekday = weekdays(timestamp), day = get_day(timestamp)) %>%
   rename("date" = "timestamp") 
 
-loyalty_data_cleaned$location <- iconv(loyalty_data_cleaned$location, to='ASCII//TRANSLIT')
+loyalty_data_cleaned$location <- iconv(loyalty_data_cleaned$location, to = 'ASCII//TRANSLIT')
 loyalty_data_cleaned
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE}
 # Credit card data
 cc_data$timestamp <- date_time_parse(cc_data$timestamp,
                                  zone = "",
@@ -126,7 +132,7 @@ assignment_data
 ```
 After cleaning the individual data frames, we can now proceed to combine the GPS and car assignment data in a single data frame.
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE}
 # Join gps and assignment data using full join
 location_carid_join <- gps_data %>%
   full_join(assignment_data, by = c("id" = "CarID")) %>% 
@@ -144,7 +150,7 @@ We will first perform exploratory data analysis, employing visualization to aid 
     - Outliers
 
 ### Missing values
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Loyalty card- Percentage of missing values"}
+```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Loyalty card- Percentage of missing values"}
 ##loyalty card
 missing.values_loyalty <- loyalty_data_cleaned %>%
   gather(key = "key", value = "val") %>%
@@ -173,7 +179,7 @@ percentage.plot_loyalty <- missing.values_loyalty %>%
 ggplotly(percentage.plot_loyalty, tooltip = c("text"))
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Credit card- Percentage of missing values"}
+```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Credit card- Percentage of missing values"}
 ##credit card
 missing.values_cc <- cc_data_cleaned %>%
   gather(key = "key", value = "val") %>%
@@ -202,7 +208,7 @@ percentage.plot_cc <- missing.values_cc %>%
 ggplotly(percentage.plot_cc, tooltip = c("text"))
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Location data- Percentage of missing values"}
+```{r, tidy.opts=list(width.cutoff=50),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Location data- Percentage of missing values"}
 ##location data
 missing.values_gps_carid <- location_carid_join %>%
   gather(key = "key", value = "val") %>%
@@ -233,7 +239,7 @@ However, there appears to be missing values in the location data provided.
 
 From the above plot, LastName, FirstName, CurrentEmploymentType and CurrentEmploymentTitle have the highest percentage of missing values, followed other variables in the combined GPS and car assignment data dataset. On further investigation, we note that this is because there seems to be employees with no specific cars assigned and cars which are not assigned to a specific employee. This results in the joined tables having empty values.
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, fig.cap="Table: Employees with no assigned car"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, fig.cap="Table: Employees with no assigned car"}
 ##Employees with no cars assigned
 missing_carid <- location_carid_join  %>%
   group_by(id) %>%
@@ -243,7 +249,7 @@ missing_carid = subset(missing_carid, select = -c(lat,long,date,day,hour))
 DT::datatable(missing_carid, filter = 'top', options = list(autoWidth = TRUE, scrollX = TRUE))
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, fig.cap="Cars with no assigned employees"}
+```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, fig.cap="Cars with no assigned employees"}
 ##Cars not assigned to employees
 missing_empname <- location_carid_join  %>%
   group_by(id, FirstName, LastName) %>%
@@ -288,7 +294,7 @@ ggplotly(check_distribution_cc)
 
 From the above distributions, we can see that the range of values differ greatly. In order to observe the distributions clearly, we will re-scale the data using log transformation. 
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, fig.cap="Log transformed distribution of loyalty card spending"}
+```{r, tidy.opts=list(width.cutoff=55),tidy=TRUE, fig.cap="Log transformed distribution of loyalty card spending"}
 ##loyalty card
 check_distribution_loyalty_log <- loyalty_data %>%
   ggplot(aes(x=price)) +
@@ -302,7 +308,7 @@ check_distribution_loyalty_log <- loyalty_data %>%
 check_distribution_loyalty_log
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, fig.cap="Log transformed distribution of credit card spending"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, fig.cap="Log transformed distribution of credit card spending"}
 ##credit card
 check_distribution_cc_log <- cc_data %>%
   ggplot(aes(x=price)) +
@@ -320,7 +326,7 @@ The distributions of the log-transformed variables now approximates to the norma
 
 We have also plotted the total spent per day in each store for both loyalty and credit card data. As seen in the figures below, the spending differs greatly between stores (note free scales). However, total spending per day from credit card and loyalty card data follows the same trending.
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-screen-inset shaded", fig.height=10, fig.cap="Loyalty card spending per store"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, layout="l-screen-inset shaded", fig.height=10, fig.cap="Loyalty card spending per store"}
 ##loyalty card
 summ_loyalty_data <- loyalty_data_cleaned %>%
   group_by(location, date) %>%
@@ -339,7 +345,7 @@ check_distribution_loyalty_location <- summ_loyalty_data %>%
 ggplotly(check_distribution_loyalty_location)
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-screen-inset shaded", fig.height=10, fig.cap="Credit card spending per store"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, layout="l-screen-inset shaded", fig.height=10, fig.cap="Credit card spending per store"}
 ##credit card
 summ_cc_data <- cc_data_cleaned %>%
   group_by(location, date) %>%
@@ -363,7 +369,7 @@ From the charts above, we noted that there was an additional location for credit
 
 The outliers are also examined using ggplot().
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Distribution of loyalty card spending per store"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Distribution of loyalty card spending per store"}
 ##loyalty card
 d <- highlight_key(loyalty_data_cleaned)
 m <- list(l=50, r=50, b=150, t=0, pad=2)
@@ -379,7 +385,7 @@ crosstalk::bscols(gg,DT::datatable(d) %>%
                     formatDate(1, method = 'toLocaleDateString'), widths = 12)
 ```
 
-```{r, tidy.opts=list(width.cutoff=80),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Distribution of credit card spending per store"}
+```{r, tidy.opts=list(width.cutoff=60),tidy=TRUE, layout="l-body-outset", fig.width=5.5, fig.height=5, fig.cap="Distribution of credit card spending per store"}
 cc_data_cleaned$timestamp <- as.character(cc_data_cleaned$timestamp)
 
 d1 <- highlight_key(cc_data_cleaned)
